src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTag_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTag_StringErrorContext.class */
public final class NVQueryResourceTag_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglGenQueryResourceTagNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glGenQueryResourceTagNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glGenQueryResourceTagNV()I", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("nglDeleteQueryResourceTagNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glDeleteQueryResourceTagNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glDeleteQueryResourceTagNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("nglQueryResourceTagNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glQueryResourceTagNV(ILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glQueryResourceTagNV(ILjava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glGenQueryResourceTagNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        methods.put("glDeleteQueryResourceTagNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVQueryResourceTagErrorContext");
        return methods;
    }
}
